maze.shortestpath.ShortestPathMaze.scala.error
Erreur de compilation :
ShortestPathMaze:36: error: ')' expected but '}' found.
  }
  ^